substrate/frame/support/test/tests/construct_runtime_v2_ui/can_only_be_attached_to_mod.rs
#[frame_support::construct_runtime_v2]
fn construct_runtime() {}

fn main() {}
